# refewbapp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.rst  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
deploy/: deps.sh
deploy/heat/: api.yaml  database.yaml  env.yaml  refwepapp.yaml
deploy/wsgi/: guconfig.py  uwsgi.ini
refwebapp/: app.py  conf.py  models.py  records.py  root.py  version.py  wsgi.py
tests/: test_refwebapp.py
