[tool.poetry]
name = "refwebapp"
version = "0.1.0"
description = ""
authors = ["Pavlo Shchelokovskyy <shchelokovskyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
falcon = "^2.0.0"
falcon-sqla = "^0.1.0"
gunicorn = "^20.0.4"
sqlalchemy = "^1.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
devserver = "refwebapp.app:devserver"

[tool.black]
line-length = 79
target_version = ['py36']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
