[metadata]
name = refwebapp
author = Pavlo Shchelokovskyy
author-email = shchelokovskyy at gmail com
summary = Minimal webapp to validate clouds
description-file =
    README.rst
home-page = https://github.com/pshchelo/refwebapp
classifier =
    Development Status :: 1 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python-requires = >= 3.6
setup_requires =
    pbr

[files]
packages =
    refwebapp

[entry_points]
wsgi_scripts =
    refwebapp = refwebapp.app:create_app

[extras]
test =
    pytest
    flake8
    flake8-black
pgsql =
    pg8000
mysql =
    pymysql
serve =
    gunicorn
